fix: Category visual tree structure alignment

--- a/front-end/src/components/CategoryList.css
+++ b/front-end/src/components/CategoryList.css
@@ -114,7 +114,7 @@
 
 /* Nested categories indentation */
 .nested-category {
-    margin-left: 1.4rem;
+    margin-left: 1.6rem;
     position: relative;
     padding-left: 0.5rem;
 }
